cmake_minimum_required(VERSION 3.25)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled main.cpp
        src/utils.cpp
        src/Solution_01.cpp
        src/Solution_02.cpp
        src/Solution_03.cpp
        src/Solution_04.cpp
        src/Solution_05.cpp
        src/Solution_06.cpp
        src/Solution_07.cpp
        src/Solution_08.cpp
        src/Solution_09.cpp
        src/Solution_10.cpp
        src/Solution_11.cpp
)
